[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "A tool for hosting a file on a port. The file can be downloaded with netcat."
name = "nc-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.7"
