[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "A utility for broadcasting stdin to any client that connects with netcat"
name = "nc-broadcast"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.7"
